--- a/_posts/2014-06-12-hisni-red.md
+++ b/_posts/2014-06-12-hisni-red.md
@@ -1,6 +1,6 @@
 ---
 title: Hišni red
-layout: a4
+layout: paper
 ---
 {::options parse_block_html="true" /}
 <div class="a4page">
@@ -42,4 +42,3 @@ Zgledni Kiberpipci ...
 
 ![Kiberpipa](logo/kiberpipa-lezeci.svg){:.float-right}
 </div>
-
